[gd_scene load_steps=15 format=2]

[ext_resource path="res://interface/Menus/Multiplayer Menu.gd" type="Script" id=1]
[ext_resource path="res://interface/Buttons/Spinbox.tres" type="Theme" id=2]
[ext_resource path="res://interface/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://interface/Buttons/Menu Button Normal.tres" type="StyleBox" id=4]
[ext_resource path="res://interface/Buttons/Menu Button Pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://interface/Buttons/Menu Button Hover.tres" type="StyleBox" id=6]
[ext_resource path="res://interface/fonts/montserrat_eb_52.tres" type="DynamicFont" id=7]
[ext_resource path="res://interface/Buttons/Settings Button Pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://interface/garbage.png" type="Texture" id=9]
[ext_resource path="res://Utilities/Audible Menu.tscn" type="PackedScene" id=11]
[ext_resource path="res://interface/Buttons/Godot Theme.tres" type="Theme" id=12]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[node name="Multiplayer Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}
default_layer = NodePath("Main Container")
background = NodePath("background")
other_exceptions = [ NodePath("Label"), NodePath("garbage") ]

[node name="background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.129412, 0.4, 0.486275, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="."]
margin_left = 204.0
margin_top = 16.0
margin_right = 1716.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 1 )
text = "MULTIPLAYER"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Main Container" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -756.0
margin_top = -260.0
margin_right = 756.0
margin_bottom = 342.0
custom_constants/separation = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Join Game Button" type="Button" parent="Main Container"]
margin_right = 1512.0
margin_bottom = 99.0
rect_min_size = Vector2( 0, 60 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 1, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Join Game"
__meta__ = {
"_editor_description_": ""
}

[node name="Host Game Button" type="Button" parent="Main Container"]
margin_top = 119.0
margin_right = 1512.0
margin_bottom = 218.0
rect_min_size = Vector2( 507, 60 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 1, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Host Game"

[node name="Create Server Button" type="Button" parent="Main Container"]
margin_top = 238.0
margin_right = 1512.0
margin_bottom = 337.0
rect_min_size = Vector2( 507, 60 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 1, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Create Server"

[node name="Join Game Container" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -926.0
margin_top = -260.0
margin_right = 926.0
margin_bottom = 445.0
rect_min_size = Vector2( 1512, 602 )
custom_constants/separation = 60
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Server Browser Button" type="Button" parent="Join Game Container"]
margin_left = 26.0
margin_right = 586.0
margin_bottom = 705.0
rect_min_size = Vector2( 560, 602 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 1, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Server Browser"

[node name="Queue Container" type="VBoxContainer" parent="Join Game Container"]
margin_left = 646.0
margin_right = 1206.0
margin_bottom = 705.0
custom_constants/separation = 4

[node name="Queue Button" type="Button" parent="Join Game Container/Queue Container"]
margin_right = 560.0
margin_bottom = 602.0
rect_min_size = Vector2( 560, 602 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 1, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Queue for match"

[node name="Filters Button" type="Button" parent="Join Game Container/Queue Container"]
margin_top = 606.0
margin_right = 560.0
margin_bottom = 705.0
rect_min_size = Vector2( 507, 60 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 1, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Edit Filters"

[node name="Direct Connection Button" type="Button" parent="Join Game Container"]
margin_left = 1266.0
margin_right = 1826.0
margin_bottom = 705.0
rect_min_size = Vector2( 560, 602 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 1, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Directly Connect"

[node name="Server Browser Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -756.0
margin_top = -260.0
margin_right = 756.0
margin_bottom = 342.0
rect_min_size = Vector2( 1512, 602 )
custom_constants/separation = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Server Browser Title" type="Label" parent="Server Browser Container"]
margin_right = 1524.0
margin_bottom = 99.0
rect_min_size = Vector2( 507, 60 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Server Browser"
align = 1

[node name="Server Browser Scroller" type="ScrollContainer" parent="Server Browser Container"]
margin_top = 119.0
margin_right = 1524.0
margin_bottom = 719.0
rect_min_size = Vector2( 1512, 600 )
scroll_horizontal_enabled = false

[node name="Server Browser List" type="VBoxContainer" parent="Server Browser Container/Server Browser Scroller"]
margin_right = 1512.0
margin_bottom = 600.0
rect_min_size = Vector2( 1512, 600 )

[node name="Direct Connection Container" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -756.0
margin_top = -172.0
margin_right = 756.0
margin_bottom = 342.0
rect_min_size = Vector2( 1512, 514 )
custom_constants/separation = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Title" type="Label" parent="Direct Connection Container"]
margin_right = 1512.0
margin_bottom = 99.0
rect_min_size = Vector2( 507, 60 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Direct Connection"
align = 1

[node name="IP Setter" type="LineEdit" parent="Direct Connection Container"]
margin_top = 119.0
margin_right = 1512.0
margin_bottom = 226.0
theme = ExtResource( 12 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
placeholder_text = "Server IP"

[node name="Connect Button" type="Button" parent="Direct Connection Container"]
margin_top = 246.0
margin_right = 1512.0
margin_bottom = 345.0
rect_min_size = Vector2( 300, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 1, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Connect to Server"

[node name="Queue Menu" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -756.0
margin_top = -260.0
margin_right = 756.0
margin_bottom = 342.0
rect_min_size = Vector2( 1512, 602 )
custom_constants/separation = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Title" type="Label" parent="Queue Menu"]
margin_right = 1512.0
margin_bottom = 99.0
rect_min_size = Vector2( 507, 60 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Queueing for match..."
align = 1

[node name="Queue Filters Menu" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -756.0
margin_top = -260.0
margin_right = 756.0
margin_bottom = 342.0
rect_min_size = Vector2( 1512, 602 )
custom_constants/separation = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Title" type="Label" parent="Queue Filters Menu"]
margin_right = 1512.0
margin_bottom = 99.0
rect_min_size = Vector2( 507, 60 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Match Queue Filters"
align = 1

[node name="Host Game Container" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -756.0
margin_top = -260.0
margin_right = 756.0
margin_bottom = 342.0
custom_constants/separation = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Local Checker" type="Button" parent="Host Game Container"]
margin_right = 1512.0
margin_bottom = 99.0
rect_min_size = Vector2( 300, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 1, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
pressed = true
text = "Local"

[node name="Create Server Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -756.0
margin_top = -310.0
margin_right = 957.0
margin_bottom = 533.0
rect_min_size = Vector2( 1512, 0 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Create Server Container" type="HBoxContainer" parent="Create Server Container"]
margin_right = 1713.0
margin_bottom = 99.0
custom_constants/separation = 20

[node name="Create Server Button" type="Button" parent="Create Server Container/Create Server Container"]
margin_right = 740.0
margin_bottom = 99.0
rect_min_size = Vector2( 740, 0 )
rect_pivot_offset = Vector2( -263, -327 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.152941, 0.780392, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Create Server"
__meta__ = {
"_editor_description_": ""
}

[node name="Headless Button" type="Button" parent="Create Server Container/Create Server Container"]
margin_left = 760.0
margin_right = 1233.0
margin_bottom = 99.0
rect_min_size = Vector2( 473, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 1, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
text = "Headless"

[node name="Local Button" type="Button" parent="Create Server Container/Create Server Container"]
margin_left = 1253.0
margin_right = 1512.0
margin_bottom = 99.0
rect_min_size = Vector2( 259, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 1, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
text = "Local"

[node name="Select Map Container" type="HBoxContainer" parent="Create Server Container"]
margin_top = 119.0
margin_right = 1713.0
margin_bottom = 218.0
custom_constants/separation = 114

[node name="Label" type="Label" parent="Create Server Container/Select Map Container"]
margin_right = 491.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 7 )
text = "Select Map:"

[node name="Menu" type="OptionButton" parent="Create Server Container/Select Map Container"]
margin_left = 605.0
margin_right = 1512.0
margin_bottom = 99.0
rect_min_size = Vector2( 907, 0 )
rect_pivot_offset = Vector2( -263, -327 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.152941, 0.780392, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "3v3 Arena"
align = 1
items = [ "3v3 Arena", null, false, 0, null, "Dust II", null, false, 1, null, "KOTH and DM Map", null, false, 2, null ]
selected = 0

[node name="Select Mode Container" type="HBoxContainer" parent="Create Server Container"]
margin_top = 238.0
margin_right = 1713.0
margin_bottom = 337.0
custom_constants/separation = 60

[node name="Label" type="Label" parent="Create Server Container/Select Mode Container"]
margin_right = 545.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 7 )
text = "Select Mode:"

[node name="Menu" type="OptionButton" parent="Create Server Container/Select Mode Container"]
margin_left = 605.0
margin_right = 1512.0
margin_bottom = 99.0
rect_min_size = Vector2( 907, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.152941, 0.780392, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Default Gamemode"
align = 1
items = [ "Default Gamemode", null, false, 0, null, "3v3 Elimination", null, false, 1, null ]
selected = 0

[node name="Select Max Players Container" type="HBoxContainer" parent="Create Server Container"]
margin_top = 357.0
margin_right = 1713.0
margin_bottom = 456.0
custom_constants/separation = 381

[node name="Label" type="Label" parent="Create Server Container/Select Max Players Container"]
margin_right = 861.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 7 )
text = "Select Player Count:"

[node name="Player Count Setter" type="SpinBox" parent="Create Server Container/Select Max Players Container"]
margin_left = 1242.0
margin_right = 1512.0
margin_bottom = 99.0
rect_min_size = Vector2( 270, 0 )
theme = ExtResource( 2 )
value = 5.0
align = 1
suffix = "Players"

[node name="Port Container" type="HBoxContainer" parent="Create Server Container"]
margin_top = 476.0
margin_right = 1713.0
margin_bottom = 585.0
custom_constants/separation = 60

[node name="Label" type="Label" parent="Create Server Container/Port Container"]
margin_top = 5.0
margin_right = 943.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 7 )
text = "Select Gameplay Port:"

[node name="Port Setter" type="LineEdit" parent="Create Server Container/Port Container"]
margin_left = 1003.0
margin_right = 1289.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 7 )
text = "25565"
align = 1

[node name="Browser Port Container" type="HBoxContainer" parent="Create Server Container"]
margin_top = 605.0
margin_right = 1713.0
margin_bottom = 714.0
custom_constants/separation = 60

[node name="Label" type="Label" parent="Create Server Container/Browser Port Container"]
margin_top = 5.0
margin_right = 871.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 7 )
text = "Select Browser Port:"

[node name="Port Setter" type="LineEdit" parent="Create Server Container/Browser Port Container"]
margin_left = 931.0
margin_right = 1217.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 7 )
text = "42069"
align = 1

[node name="Browser Port Container2" type="HBoxContainer" parent="Create Server Container"]
margin_top = 734.0
margin_right = 1713.0
margin_bottom = 843.0
custom_constants/separation = 60

[node name="Label" type="Label" parent="Create Server Container/Browser Port Container2"]
margin_top = 5.0
margin_right = 1119.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 7 )
text = "Select Local Browser Port:"

[node name="Port Setter" type="LineEdit" parent="Create Server Container/Browser Port Container2"]
margin_left = 1179.0
margin_right = 1465.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 7 )
text = "25566"
align = 1

[node name="garbage" type="TextureRect" parent="."]
visible = false
margin_top = 664.0
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audible Menu" parent="." instance=ExtResource( 11 )]

[connection signal="pressed" from="Main Container/Join Game Button" to="." method="_on_Join_Game_Button_pressed"]
[connection signal="pressed" from="Main Container/Host Game Button" to="." method="_on_Host_Game_Button_pressed"]
[connection signal="pressed" from="Main Container/Create Server Button" to="." method="_on_Create_Server_Button_pressed"]
[connection signal="pressed" from="Join Game Container/Server Browser Button" to="." method="_on_Server_Browser_Button_pressed"]
[connection signal="pressed" from="Join Game Container/Queue Container/Queue Button" to="." method="_on_Queue_Button_pressed"]
[connection signal="pressed" from="Join Game Container/Queue Container/Filters Button" to="." method="_on_Queue_Filters_Button_pressed"]
[connection signal="pressed" from="Join Game Container/Direct Connection Button" to="." method="_on_Direct_Connection_Button_pressed"]
[connection signal="text_entered" from="Direct Connection Container/IP Setter" to="." method="_on_server_directly_connected"]
[connection signal="pressed" from="Direct Connection Container/Connect Button" to="." method="_on_server_directly_connected"]
[connection signal="toggled" from="Host Game Container/Local Checker" to="." method="_on_Local_Checker_toggled"]
[connection signal="pressed" from="Create Server Container/Create Server Container/Create Server Button" to="." method="_on_server_creation_initiated"]
[connection signal="item_selected" from="Create Server Container/Select Map Container/Menu" to="." method="_on_Map_selected"]
[connection signal="item_selected" from="Create Server Container/Select Mode Container/Menu" to="." method="_on_Gamemode_selected"]
[connection signal="value_changed" from="Create Server Container/Select Max Players Container/Player Count Setter" to="." method="_on_Player_Count_changed"]
[connection signal="text_changed" from="Create Server Container/Port Container/Port Setter" to="." method="_on_port_changed"]
[connection signal="text_changed" from="Create Server Container/Browser Port Container/Port Setter" to="." method="_on_browser_port_changed"]
[connection signal="text_changed" from="Create Server Container/Browser Port Container2/Port Setter" to="." method="_on_local_browser_port_changed"]
